--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -43,3 +43,22 @@
     transform: translateY(-8px);
     transition: all .2s;
 }
+
+.icons {
+    margin-top: 35px;
+}
+
+@media only screen and (max-width:576px) {
+    .black-section {
+        display: none;
+    }
+
+    .profile-card {
+        position: static;
+    }
+
+    .icons {
+        position: relative;
+        margin-top: 35px;
+    }
+}
